added codes to coexistence_analysis that generates suitable imgID pickle

--- a/notebook/coco_coexistance_analysis.ipynb
+++ b/notebook/coco_coexistance_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,6 +29,7 @@
     "\n",
     "# load the data from captions\n",
     "import json\n",
+    "\n",
     "with open(COCO_ANNO_PATH + 'captions_train2014.json') as f:\n",
     "    coco_captions = json.load(f)\n",
     "    \n",
@@ -52,29 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A couple of people and some motor bikes. Several parked motorcycles sitting parked beside a fence. a couple of dirt bike motorcycles are parked Bikes parked on the side of a street beside a fence. Group of motorcycles with a rider in the background.  '"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img_captions['287140']['captions']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -84,20 +63,11 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "0:00:03.232244\n",
+      "0:00:03.423934\n",
       "creating index...\n",
-      "index created!\n"
+      "index created!\n",
+      "[]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -112,8 +82,74 @@
     "import coco_text as ct\n",
     "\n",
     "ct = ct.COCO_Text(COCO_PATH + 'COCO_Text.json')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'captions': 'A suitcase that is next to a bag. A piece of luggage covered in luggage tags The luggage contains tags from several different locations. A piece of luggage that has paper tags on it. A suitcase is waiting to be claimed in an airport. ', 'image': {u'license': 3, u'file_name': u'COCO_train2014_000000294914.jpg', u'coco_url': u'http://mscoco.org/images/294914', u'height': 425, u'width': 640, u'date_captured': u'2013-11-18 11:18:21', u'flickr_url': u'http://farm4.staticflickr.com/3032/2538554933_c1bef44aab_z.jpg', u'id': 294914}, 'annotation': [{u'image_id': 294914, u'id': 749830, u'caption': u'A suitcase that is next to a bag.'}, {u'image_id': 294914, u'id': 752091, u'caption': u'A piece of luggage covered in luggage tags'}, {u'image_id': 294914, u'id': 754334, u'caption': u'The luggage contains tags from several different locations.'}, {u'image_id': 294914, u'id': 754460, u'caption': u'A piece of luggage that has paper tags on it.'}, {u'image_id': 294914, u'id': 755048, u'caption': u'A suitcase is waiting to be claimed in an airport.'}], 'texts': [{u'language': u'english', u'area': 540.1768517646655, u'class': u'machine printed', u'utf8_string': u'404', u'image_id': 294914, u'bbox': [304.53064067769816, 263.1979695431472, 17.268128161888683, 31.281725888324896], u'legibility': u'legible', u'id': 1057395}, {u'language': u'english', u'area': 377.1924568356719, u'id': 1057396, u'image_id': 294914, u'bbox': [273.23215838427484, 153.17258883248735, 12.951096121416548, 29.124365482233472], u'legibility': u'illegible', u'class': u'machine printed'}, {u'language': u'english', u'area': 356.3642461848053, u'class': u'machine printed', u'utf8_string': u'NR', u'image_id': 294914, u'bbox': [342.5074517548974, 315.4072997275363, 29.85074626865668, 11.938202247190993], u'legibility': u'legible', u'id': 1186970}, {u'language': u'not english', u'area': 222.37128961931853, u'id': 1186971, u'image_id': 294914, u'bbox': [393.85073533698693, 255.71628849158128, 7.164179104477597, 31.03932584269661], u'legibility': u'legible', u'class': u'machine printed'}, {u'language': u'not english', u'area': 518.8663424450775, u'id': 1186972, u'image_id': 294914, u'bbox': [266.0895413071362, 150.66010871630033, 15.522388059701484, 33.42696629213482], u'legibility': u'legible', u'class': u'machine printed'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"extract coco-text annotations and pack into img-captions\"\"\"\n",
+    "# print ct.getImgIds(imgIds=ct.train, catIds=[('legibility','legible')])\n",
+    "# print ct.getAnnIds(imgIds=[294914])\n",
+    "# print img_captions[\"294914\"]\n",
+    "for imgId in img_captions.keys():\n",
+    "    annIds = ct.getAnnIds(imgIds=[int(imgId)])\n",
+    "    anns = ct.loadAnns(ids = annIds)\n",
+    "    img_captions[imgId][\"texts\"] = anns\n",
     "\n",
-    "ct.loadAnns(ct.getAnnIds(imgIds='8006'))"
+    "print img_captions[\"294914\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "683\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Compute img-ids with a filter function f that takes in an annotation and returns a boolean.\"\"\"\n",
+    "def filter_img_id(f):\n",
+    "    output = []\n",
+    "    for imgId in img_captions.keys():\n",
+    "        tmp = filter(f, img_captions[imgId][\"texts\"])\n",
+    "        if len(tmp)>0:\n",
+    "            output.append(imgId)\n",
+    "    return output\n",
+    "\n",
+    "def _is_large(ann, threshold = 0.1):\n",
+    "    img_id = ann['image_id']\n",
+    "    img_info = img_captions[str(img_id)]['image']\n",
+    "    h,w = img_info['height'], img_info['width']\n",
+    "    return ann['area']>=h*w*threshold\n",
+    "\n",
+    "results = [int(x) for x in filter_img_id(_is_large)]\n",
+    "print len(results)\n",
+    "\n",
+    "from six.moves import cPickle as pkl\n",
+    "with open('../../input/large_text_img_ids.pkl', 'w+') as f:\n",
+    "    pkl.dump(results, f, protocol=pkl.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -739,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
